# RoCo_TaskBoardAssembly

./: .gitattributes  .gitignore  PARTS.md  README.md  pyproject.toml  scene_base.usd  scene_init.usd  snap_attach.py
docs/: pi05_eval.md
parts/: battery_size1.usdc  battery_size5.usdc  bolt_8mm.usdc  bolt_rack.usdc  ethernet.usdc  gear_20teeth.usdc  gear_60teeth.usdc  hdmi.usdc  pin.usdc  rod_16mm.usdc  task_board.usdc  task_board_color.usdc  task_board_color_v2.usdc  usb_a.usdc  usb_c.usdc
robot/: gripper.usdc  gripper1.usdc  vega_1u_gripper.urdf  vega_1u_gripper.usda  vega_1u_gripper_collision.yaml  vega_1u_gripper_nocam.usda
robot/configuration/: vega_1u_Gripper_gripper.usd  vega_1u_base.usd  vega_1u_collision_spheres.collision_base.usd  vega_1u_collision_spheres.collision_physics.usd  vega_1u_collision_spheres.collision_sensor.usd  vega_1u_gripper_Gripper_gripper.usd  vega_1u_gripper_Gripper_gripper1.usd  vega_1u_physics.usd  vega_1u_robot.usd
robot/meshes/: L_arm_l2_visuals_arm_l2_mesh.mtl  L_arm_l8_visuals_arm_l8_mesh.mtl  torso_flip_link_collisions_torso_link_mesh.mtl  vega_1u_base_link_visuals_base_link_mesh.mtl  vega_1u_head_l1_visuals_head_l1_mesh.mtl  vega_1u_head_l3_visuals_head_l3_mesh.mtl  vega_1u_lift_link_collisions_lift_link_mesh.mtl
scripts/: eval_pi05_roco.sh  run_roco.sh  setup_git_lfs.ps1
table/: OakTableLarge_meters.usd
task/: README.md  collect_lerobot_v3.py  dp_server.py  extract_part_poses.py  find_reachable_above_boards.py  param_config.py  part_init_poses.json  pi05_server.py  policy_api.py  run_pick_place.py
(+20 files in other folders)
